name:                iCalendar
version:             0.5.0.0
synopsis:            iCalendar data types, parser, and printer.
description:         Data definitions, parsing and printing of the iCalendar
                     format (RFC5545).
homepage:            http://github.com/chrra/iCalendar
bug-reports:         http://github.com/chrra/iCalendar/issues
license:             BSD3
license-file:        LICENSE
author:              Christian Rødli Amble
maintainer:          cra@cra.no
copyright:           (c) Tingtun
stability:           experimental
category:            Text
build-type:          Simple
tested-with:         GHC==7.6.1
cabal-version:       >=1.8
data-files:          "tests/ical/*.ics"


source-repository head
  type:              git
  location:          git://github.com/chrra/iCalendar.git

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
  exposed-modules:
                     Text.ICalendar
                     Text.ICalendar.Content
                     Text.ICalendar.Parameters
                     Text.ICalendar.Properties
                     Text.ICalendar.Properties.Alarm
                     Text.ICalendar.Properties.Descriptive
                     Text.ICalendar.Values
--  other-modules:
                     Text.ICalendar.Internal
                     Text.ICalendar.Components.Internal
                     Text.ICalendar.Parameters.Internal
                     Text.ICalendar.Properties.Internal
                     Text.ICalendar.Values.Internal

  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6 && < 2.7
  else
    build-depends: network >= 2.4 && < 2.6

  build-depends:       base >=4.5 && <5, time >=1.5, data-default >=0.3
                     , attoparsec >= 0.12, case-insensitive >=0.4
                     , bytestring >=0.10 && < 0.11, parsec >=3.1.0
                     , text, containers >= 0.5 && < 0.6, mime >=0.4.0.2
                     , mtl >=2.2.1, old-locale, base64-bytestring ==1.0.*
                     , deepseq, heap
  ghc-options:       -Wall

test-suite spec
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall
  hs-source-dirs:    tests
  main-is:           Spec.hs
  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6 && < 2.7
  else
    build-depends: network >= 2.4 && < 2.6
  build-depends:       base  >= 4.5 && <5, iCalendar
                     , bytestring, text, data-default, case-insensitive
                     , hspec == 2.*, containers, time, parsec, mime

benchmark bench
  type:              exitcode-stdio-1.0
  hs-source-dirs:    bench
  main-is:           Bench.hs
  build-depends:       base, iCalendar, criterion, bytestring, data-default
                     , deepseq, mime
  ghc-options:       -Wall -O2
