name:                iCalendar
version:             0.4.0.5
synopsis:            iCalendar data types, parser, and printer.
description:         Data definitions, parsing and printing of the iCalendar
                     format (RFC5545).
homepage:            http://github.com/chrra/iCalendar
bug-reports:         http://github.com/chrra/iCalendar/issues
license:             BSD3
license-file:        LICENSE
author:              Christian Rødli Amble
maintainer:          cra@cra.no
copyright:           (c) Tingtun
stability:           experimental
category:            Text
build-type:          Simple
tested-with:         GHC==7.10.3, GHC==8.0.2, GHC==8.2.2, GHC==8.4.2
cabal-version:       >=1.8

source-repository head
  type:              git
  location:          git://github.com/chrra/iCalendar.git

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
  exposed-modules:     Text.ICalendar.Types
                     , Text.ICalendar.Parser
                     , Text.ICalendar.Printer
                     , Text.ICalendar
  other-modules:       Text.ICalendar.Parser.Common
                     , Text.ICalendar.Parser.Components
                     , Text.ICalendar.Parser.Content
                     , Text.ICalendar.Parser.Parameters
                     , Text.ICalendar.Parser.Properties
                     , Paths_iCalendar

  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6 && < 2.7
  else
    build-depends: network >= 2.4 && < 2.6

  if !impl(ghc >= 8.0)
    build-depends: semigroups == 0.18.*

  build-depends:       base >=4.5 && <5, time >=1.5, data-default >=0.3
                     , case-insensitive >=0.4
                     , bytestring >=0.10 && < 0.11, parsec >=3.1.0
                     , text, containers >= 0.5 && < 0.6, mime >=0.4.0.2
                     , mtl >=2.1.0, old-locale, base64-bytestring ==1.0.*
  ghc-options:       -Wall
