cabal-version:       3.0
name:                iCalendar
version:             0.4.1.0
synopsis:            iCalendar data types, parser, and printer.
description:         Data definitions, parsing and printing of the iCalendar
                     format (RFC5545).
homepage:            http://github.com/chrra/iCalendar
bug-reports:         http://github.com/chrra/iCalendar/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Christian Rødli Amble
maintainer:          jakob.schoettl@intensovet.de
copyright:           (c) Tingtun
stability:           experimental
category:            Text
build-type:          Simple
tested-with:         GHC==7.10.3, GHC==8.0.2, GHC==8.2.2, GHC==8.4.2, GHC==9.6.5

source-repository head
  type:              git
  location:          git://github.com/chrra/iCalendar.git

library
  default-language:    Haskell2010
  exposed-modules:     Text.ICalendar.Types
                     , Text.ICalendar.Parser
                     , Text.ICalendar.Printer
                     , Text.ICalendar
  other-modules:       Text.ICalendar.Parser.Common
                     , Text.ICalendar.Parser.Components
                     , Text.ICalendar.Parser.Content
                     , Text.ICalendar.Parser.Parameters
                     , Text.ICalendar.Parser.Properties
                     , Paths_iCalendar

  autogen-modules:     Paths_iCalendar

  if !impl(ghc >= 8.0)
    build-depends: semigroups == 0.18.*

  build-depends:       base >=4.5 && <5,
                       containers >= 0.5 && < 0.7,
                       bytestring >=0.11 && <1.0.0,
                       base64-bytestring >= 1.2.1 && < 1.3,
                       case-insensitive >= 1.2.1 && < 1.3,
                       mtl >= 2.3.1 && < 2.4,
                       text >= 2.0.2 && < 2.1,
                       data-default >= 0.7.1 && < 0.8,
                       old-locale >= 1.0.0 && < 1.1,
                       mime >= 0.4.0 && < 0.5,
                       network-uri >= 2.6.4 && < 2.7,
                       parsec >= 3.1.16 && < 3.2,
                       time >= 1.12.2 && < 1.13,
  ghc-options:       -Wall
